modules/ec2/main.tf
resource "aws_key_pair" "key_pair" {
    key_name = "${var.env}-terraform-key"
    public_key = file(var.key_public_path)
}

resource "aws_default_vpc" "default" {
  
}

resource "aws_security_group" "my_sg" {
    name ="${var.env}-terra-security-group"   
    vpc_id =  aws_default_vpc.default.id
}

resource "aws_security_group_ingress_rule" "allow_http" {
    security_group_ids = aws_security_group.my_sg.id
    cidr_ipv4 = "0.0.0.0/0"
    from_port = 80
    ip_protocol = "tcp"
    to_port = 80
}

resource "aws_security_group_ingress_rule" "allow_ssh" {
    security_group_ids = aws_security_group.my_sg.id
    cidr_ipv4 = "0.0.0.0/0"
    from_port = 22
    ip_protocol = "tcp"
    to_port = 22
}

resource "aws_security_group_egress_rule" "allow_all" {
    security_group_ids = aws_security_group.my_sg.id
    cidr_ipv4 = "0.0.0.0/0"
    ip_protocol = "-1"
}

resource "aws_instance" "my-instance" {
     count = var.instance_count
     ami = var.ami
     instance_type = var.instance_type
     vpc_security_group_ids = [ aws_security_group.my_sg.id ]

     root_block_device {
       volume_size = 20
       volume_type = "gp3"
     }

     tags = {
        Name = "${var.env}-terraform-${count.index+1}"
     }
}
